--- a/CSS/style.css
+++ b/CSS/style.css
@@ -513,5 +513,5 @@ footer .sticky-form{float:left;width:100%;background:#d3ae67;padding:10px 0 5px 
 .col-6	{width:50%; float:left;}
 .col-3	{width:25%; float:left;}
 /*div.mxdialog.popup-form .body{
-	background-repeat:no-repeat; background-position:center; background-size:cover; background-image:url(../images/popup-bg.jpg);
+	background-repeat:no-repeat; background-position:center; background-size:cover; background-image:url(../images/popup-bg.webp);
 }*/
